# enigma2-wetek

./: Navigation.py  RecordTimer.py  configure.ac  enigma2.bb  mytest.py  skin.py
data/: Makefile.am  keymap-hdf-wetek.xml  keymap.xml  menu.xml  unicable.xml
data/defaults/: Makefile.am
lib/actions/: action.cpp  action.h
lib/base/: filepush.cpp  filepush.h  ioprio.cpp  smartptr.h
lib/components/: tuxtxtapp.cpp
lib/driver/: rcinput.cpp
lib/dvb/: Makefile.inc  amldecoder.cpp  amldecoder.h  db.cpp  demux.cpp  demux.h  dvb.cpp  dvb.h  frontend.cpp  idvb.h  pmt.cpp  sec.cpp  volume.cpp
lib/gdi/: fb.h  gpixmap.cpp  gpixmap.h  lcd.cpp
lib/python/Components/: AVSwitch.py  About.py  EpgList.py  Lcd.py  NimManager.py  SystemInfo.py  Timeshift.py  UsageConfig.py  VfdSymbols.py
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Plugins/Extensions/PicturePlayer/: ui.py
lib/python/Plugins/Extensions/RunKodi/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/StartKodi/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/StartXBMC/: Makefile.am  plugin.py
lib/python/Plugins/SystemPlugins/: Makefile.am
lib/python/Plugins/SystemPlugins/AnimationSetup/: plugin.py
lib/python/Plugins/SystemPlugins/SoftwareManager/: ImageBackup.py  plugin.py
lib/python/Screens/: ChannelSelection.py  Dish.py  Hotkey.py  InfoBar.py  InfoBarGenerics.py  MovieSelection.py  Satconfig.py  ScanSetup.py  Standby.py  VideoMode.py
lib/python/Tools/: Downloader.py
lib/service/: servicedvb.cpp  servicemp3.cpp  servicemp3.h
main/: Makefile.am  bsod.cpp  enigma.cpp
po/: de.po
tools/: enigma2.sh.in
